--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,14 +8,20 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
-        <activity android:theme="@style/AppThemeTransparent" android:name=".MainActivity">
+        <activity
+            android:name=".CategorySelectorActivity"
+            android:theme="@style/AppThemeTransparent">
+        </activity>
+        <activity
+            android:name=".CharacterViewActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".MainScreenActivity" android:theme="@style/AppThemeTransparent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:theme="@style/AppTheme" android:name=".CharacterViewActivity"></activity>
     </application>
 
 </manifest>
